--- a/Xamarin.Swift23.Support/Xamarin.Swift23.Support.csproj
+++ b/Xamarin.Swift23.Support/Xamarin.Swift23.Support.csproj
@@ -54,10 +54,12 @@
     <Content Include="Frameworks\libswiftFoundation.dylib" />
     <Content Include="Frameworks\libswiftObjectiveC.dylib" />
     <Content Include="Frameworks\libswiftUIKit.dylib" />
+    <Content Include="Frameworks\libswiftCoreBluetooth.dylib" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SwiftFrameworksSimulator\libswiftContacts.dylib" />
     <Content Include="SwiftFrameworksSimulator\libswiftCore.dylib" />
+    <Content Include="SwiftFrameworksSimulator\libswiftCoreBluetooth.dylib" />
     <Content Include="SwiftFrameworksSimulator\libswiftCoreGraphics.dylib" />
     <Content Include="SwiftFrameworksSimulator\libswiftCoreImage.dylib" />
     <Content Include="SwiftFrameworksSimulator\libswiftDarwin.dylib" />
@@ -67,6 +69,6 @@
     <Content Include="SwiftFrameworksSimulator\libswiftUIKit.dylib" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="build\Xamarin.SwiftSupport.targets" />
+    <None Include="build\Xamarin.Swift23.Support.targets" />
   </ItemGroup>
 </Project>
